--- a/ProyectoClinica/src/main/java/ModuloVentas/jFVentas.form
+++ b/ProyectoClinica/src/main/java/ModuloVentas/jFVentas.form
@@ -71,7 +71,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="Existencias" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="312" max="-2" attributes="0"/>
-                          <Component id="Crear" min="-2" max="-2" attributes="0"/>
+                          <Component id="jBCrear" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -100,7 +100,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jTFCantidad" min="-2" pref="80" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
-                          <Component id="Agregar" min="-2" max="-2" attributes="0"/>
+                          <Component id="jBAgregar" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -117,7 +117,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jCBServicios" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTFCantidad" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="Agregar" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="jBAgregar" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -128,7 +128,7 @@
                   <Component id="jScrollPane1" min="-2" pref="183" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="Crear" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jBCrear" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="Existencias" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -144,7 +144,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="Nuevos">
+            <Component class="javax.swing.JTable" name="jTNuevos">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="0">
@@ -171,20 +171,20 @@
             <Property name="text" type="java.lang.String" value="Servicio"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="Agregar">
+        <Component class="javax.swing.JButton" name="jBAgregar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Agregar Servicio"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AgregarActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBAgregarActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="Crear">
+        <Component class="javax.swing.JButton" name="jBCrear">
           <Properties>
             <Property name="text" type="java.lang.String" value="Crear Venta"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CrearActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBCrearActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jTFCantidad">
