Cambios en el cliente de inventario :mag:
:walking:

--- a/ProyectoClinica/src/main/java/Main/Cliente.form
+++ b/ProyectoClinica/src/main/java/Main/Cliente.form
@@ -13,6 +13,7 @@
           </Properties>
           <Events>
             <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMenu2MousePressed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenu2ActionPerformed"/>
           </Events>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu1">
