--- a/ProyectoClinica/src/main/java/Main/Cliente.form
+++ b/ProyectoClinica/src/main/java/Main/Cliente.form
@@ -34,6 +34,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Pacientes"/>
           </Properties>
+          <Events>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMenu3MousePressed"/>
+          </Events>
         </Menu>
       </SubComponents>
     </Menu>
